# browser-agent

./: .gitignore  README.md  __init__.py  a.md  agent.py  analyze_output.py  browser.py  cdp.py  enhanced_merger.py  errors.py  fixes.md  inspect_data.py  launch_chrome.py  llm_backends.py  models.py  output.json  output.txt  pyproject.toml  serialization.py  targets.py  tasks.md  tools.py
dom/: __init__.py  main.py
examples/: agent_demo.py  agent_with_anthropic.py  agent_with_gemini.py  agent_with_openai.py  basic_navigation.py  form_filling.py
src/browser_agent/: __init__.py  agent.py  browser.py
src/browser_agent/cdp/: __init__.py  client.py  dom.py  session.py
src/browser_agent/core/: __init__.py  models.py  serialization.py  types.py
src/browser_agent/llm/: __init__.py  backends.py  tools.py
src/browser_agent/utils/: __init__.py  merger.py
tests/: __init__.py  conftest.py  test_browser.py  test_llm_backends.py  test_tools.py
