[project]
name = "browser-agent"
version = "0.1.0"
description = "A lightweight, high-performance browser automation library using Chrome DevTools Protocol"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["browser", "automation", "cdp", "chrome", "devtools", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
