[project]
name = "browser-agent"
version = "0.1.0"
description = "A lightweight, high-performance browser automation library using Chrome DevTools Protocol"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["browser", "automation", "cdp", "chrome", "devtools", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

# LLM backends (install separately as needed)
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
gemini = ["google-genai>=0.5.0"]
all-llms = ["openai>=1.0.0", "anthropic>=0.20.0", "google-genai>=0.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_agent"]

[tool.hatch.build.targets.sdist]
include = ["src/browser_agent"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
